# IMP.bff

./: .gitignore  .gitlab-ci.yml  .gitmodules  .imp_info.py  AUTHORS  CMakeLists.txt  ModuleBuild.cmake  README.md  Setup.cmake  dependencies.py  setup.py
.github/workflows/: build-docs.yml  conda-build.yml  conda-release.yml  gitlab-sync.yml
benchmark/: CMakeLists.txt  Files.cmake
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
data/: template_av_pair.fps.json  template_av_position.fps.json
dependency/: mongoc.description
doc/: Doxyfile  Makefile  README.md  about.rst  api.rst  conf.py  contents.rst  environment.yml  faq.rst  getting_started.ipynb  getting_started.rst  glossary.ipynb  glossary.rst  install.ipynb  install.rst  preface.rst  references.bib  related_projects.rst  roadmap.rst  user_guide.rst  whats_new.rst  zreferences.rst
doc/manual/: index.rst
doc/manual/concepts/: decay.ipynb  fcs.ipynb  fret.ipynb  index.rst
doc/manual/decays/: decay_chisurf.ipynb  decay_convolution.ipynb  decay_curves.ipynb  decay_distortions.ipynb  decay_forward_model.ipynb  decay_objective_function.ipynb  index.rst
doc/manual/fcs/: fcs_two_state_systems.ipynb  index.rst
doc/manual/imaging/: index.rst
doc/manual/input_output/: tttr.ipynb
doc/manual/intensity/: index.rst  intensity_pda.ipynb
doc/manual/programming/: index.rst  programming_fluorescence_decay_node.ipynb  programming_imp_decorator.ipynb
doc/manual/single-molecule/: decay.rst  index.rst  single_molecuale_fret_lines.ipynb  single_molecule_burst_analysis.ipynb  single_molecule_experiment_simulation.ipynb
doc/manual/structure/: index.rst  structure_accessible_volumes.ipynb  structure_distance_restaints.ipynb  structure_path_search.ipynb  structure_surface_distance.ipynb
doc/modules/: labels.rst  spectroscopy.rst  structure.rst
doc/templates/: documentation.html  index.html
doc/themes/scikit-learn-modern/: layout.html  nav.html
doc/tutorial/: index.rst
doc/tutorial/computational_graphs/: fluorescence_decay.ipynb  index.rst
doc/tutorial/fluorescence_correlation/: chisurf_fcs.ipynb  index.rst
doc/tutorial/fluorescence_decays/: chisurf_decay.ipynb  decay_curves.ipynb  forward_model.ipynb  index.rst  objective_function.ipynb
doc/tutorial/single_molecule/: experiment_simulation.ipynb  index.rst
doc/tutorial/structure/: IMP_Decorator.ipynb  IMP_MinimalAVExample.ipynb
doc/whats_new/: changelog_legend.inc  v0.12.0.rst
docker/: Dockerfile
examples/: CMakeLists.txt  INFO.txt  README.txt
examples/labels/: AVDecorator.py  AVNetworkRestraint.py  AVScreening.py  README.txt  plot_AVDecorator.py  plot_AVNetworkRestraint.py  plot_AVScreening.py  plot_path_maps.py  plot_search.py
examples/release_highlights/: README.txt  plot_release_highlights_0_12_0.py
examples/spectroscopy/: README.txt  bff_session.json  node_template.json  plot_convolution_routines.py  plot_k2_uncertainty.py  plot_pile_up.py
examples/spectroscopy/T4L/: 19-119_D0_75m_vv.txt  44-132_D0_75m_vh.txt  44-132_D0_75m_vm.txt  Prompt.txt  whitelight.txt
examples/spectroscopy/hgbp1/: eTCSPC_Donor.txt  eTCSPC_FRET.txt  eTCSPC_Prompt.txt
examples/spectroscopy/hgbp1_titration/: Prompt.txt  c00.txt  c01.txt  c02.txt  c04.txt  c06.txt  c08.txt  c09.txt  (+9 more)
examples/structure/: README.txt  T4L.py  hGBP1.dimer.py  imp_bff_flexfit.py  mGBP2.dimer_fp.py  mGBP2_dimer_fp.py  t4l_pmi.py  tg2_flexfit.py
include/: AV.h  AVNetworkRestraint.h  CnMongoObject.h  CnNode.h  CnNodeCallback.h  CnPort.h  DecayConvolution.h  DecayCurve.h  DecayLifetimeHandler.h  DecayLinearization.h  DecayModifier.h  DecayPattern.h  DecayPileup.h  DecayRange.h  DecayRoutines.h  DecayScale.h  DecayScore.h  Functions.h  MongoObject.h  Node.h  NodeCallback.h  PathMap.h  PathMapHeader.h  PathMapTile.h  PathMapTileEdge.h  Port.h  README.md  Session.h  Test.h
include/broken/: Session.h
include/cn/: CnNodeCallback.h
include/internal/: CnPortCache.h  FPSReaderWriter.h  Functions.h  Histogram.h  InverseSampler.h  MovingAverage.h  PathMapTileEdge.h  PhotonStatistics.h  README.md  json.h  pcg_extras.h  pcg_random.h
include/t/: CNode.h  NodeCallback.h  Port.h
pyext/: AV.i  BFF.types.i  CMakeLists.txt  CnNode.i  DecayConvolution.i  DecayCurve.i  DecayLifetimeHandler.i  DecayLinearization.i  DecayModifier.i  DecayPattern.i  DecayPileup.i  DecayRange.i  DecayRoutines.i  DecayScale.i  DecayScore.i  IMP_bff_MongoObject.i  IMP_bff_Node.i  IMP_bff_PathMap.i  IMP_bff_Port.i  IMP_bff_Session.i  IMP_bff_mongo.i  PathMap.i  numpy.i  swig.i-in
pyext/broken/: Session.py
pyext/cn/: CnMongoObject.i  CnPort.i
pyext/include/: IMP_bff.types.i
pyext/src/: IMP_bff_mongo.py  __init__.py  tools.py
src/: AV.cpp  AVNetworkRestraint.cpp  CMakeLists.txt  CnMongoObject.cpp  CnNode.cpp  CnNodeCallback.cpp  CnPort.cpp  DecayCurve.cpp  DecayLifetimeHandler.cpp  DecayLinearization.cpp  DecayModifier.cpp  DecayPattern.cpp  DecayPileup.cpp  DecayRange.cpp  DecayRoutines.cpp  DecayScale.cpp  DecayScore.cpp  FPSReaderWriter.cpp  Functions.cpp  MongoObject.cpp  Node.cpp  NodeCallback.cpp  PathMap.cpp  PathMapHeader.cpp  PathMapTile.cpp  PhotonStatistics.cpp  Port.cpp  README.md  Test.cpp
src/broken/: Session.cpp
src/t/: CNode.cpp  NodeCallback.cpp  Port.cpp
test/: CMakeLists.txt  constants.py  test_AVNetworkRestraint.py  test_AccessibleVolume.py  test_CnMongoObject.py  test_CnNode.py  test_CnPort.py  test_DecayBackground.py  test_DecayConvolution.py  test_DecayCurve.py  test_DecayLifetimeHandler.py  test_DecayLinearization.py  test_DecayPattern.py  test_DecayPileup.py  test_DecayRoutines.py  test_DecayScale.py  test_DecayScore.py  test_MongoObject.py  test_Node.py  test_Port.py  test_bff_AccessibleVolume.py  test_bff_Port.py  test_mongo_object.py
test/broken/: test_bff_Session.py
test/cn/: test_CnNode.py
test/references/: av_reference_0.mrc  av_reference_1.mrc  av_reference_2.mrc  av_reference_3.mrc  av_reference_4.mrc  av_reference_5.mrc  av_reference_7.mrc  av_reference_8.mrc
tools/: FindIMP.cmake  FindPython.cmake  dev_tools
utility/: CMakeLists.txt  README.md
(+30 files in other folders)
